Query5Test: estilo